[tool.poetry]
name = "inkbytes models"
version = "0.1.0"
description = "Inkbytes Data Objects Model"
authors = ["Julian De La Rosa <julian.delarosa.suncar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
