[tool.poetry]
name = "inkbytes models"
version = "0.1.0"
description = "Inkbytes Data Objects Model"
authors = ["Julian De La Rosa <julian.delarosa.suncar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
newspaper4k = "0.9.2"
annotated-types = "0.6.0"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
docopt = "0.6.2"
idna = "3.6"
pipreqs = "0.4.13"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
requests = "2.31.0"
typing-extensions = "4.9.0"
urllib3 = "2.1.0"
yarg = "0.1.9"
beautifulsoup4 = "4.12.3"
click = "8.1.7"
feedparser = "6.0.11"
filelock = "3.13.1"
jieba = "0.42.1"
joblib = "1.3.2"
lxml = "5.1.0"
nltk = "3.8.1"
pillow = "10.2.0"
pythainlp = "4.0.2"
python-dateutil = "2.8.2"
pyyaml = "6.0.1"
regex = "2023.12.25"
requests-file = "1.5.1"
sgmllib3k = "1.0.0"
six = "1.16.0"
soupsieve = "2.5"
tinysegmenter = "0.4"
tldextract = "5.1.1"
tqdm = "4.66.1"
langdetect = "1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
