[tool.poetry]
name = "ikbmodels"
version = "0.1.0"
description = "Inkbytes Data Objects Model"
authors = ["Julian De La Rosa <julian.delarosa.suncar@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from = "."}]
exclude = ["./dist", "./dist/*"]
[tool.poetry.dependencies]
python = "^3.10"
langdetect = "1.0.9"
logger = "1.4"
newspaper3k = "0.2.8"
pydantic = "2.5.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
